# tiny-ml

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs
src/examples/: circle.rs  mod.rs  speed.rs  training.rs
src/nueral_net/: mod.rs  neuron.rs  trainer.rs
src/training/: mod.rs
