[package]
name = "tiny-ml"
version = "1.0.0"
edition = "2021"
authors = ["milim <https://github.com/MilimTheTrueOne>", "Greg (floydgb@gmail.com)"]
description = "A Very Simple ML libary"
license = "GPL-3.0-only"
repository = "https://github.com/MilimTheTrueOne/tiny-ml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "*"
rand = "*"
serde = "*"
serde_derive = "*"

# Optimization level 3
[profile.release]
opt-level = 3
